objects/SBQQ__DiscountTier__c.object
<CustomObject>
    <customHelpPage>SBQQ__DiscountTierHelp</customHelpPage>
    <description>Discount tier that specifies discount for a given quantity range.</description>
    <fields>
        <fullName>SBQQ__DiscountAmount__c</fullName>
        <description>Discount amount applied when quantity falls in this tier.</description>
        <inlineHelpText>Discount amount applied when quantity falls in this tier.</inlineHelpText>
        <label>Discount ({0})</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Discount__c</fullName>
        <description>Discount percentage applied when quantity falls in this tier.</description>
        <inlineHelpText>Discount percentage applied when quantity falls in this tier.</inlineHelpText>
        <label>Discount (%)</label>
        <precision>14</precision>
        <scale>10</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__LowerBound__c</fullName>
        <description>Lower bound of the quantity range for this tier</description>
        <inlineHelpText>Lower bound of the quantity range for this tier.</inlineHelpText>
        <label>Lower Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Number__c</fullName>
        <description>Number indicating this tier&apos;s position within the schedule.</description>
        <inlineHelpText>Number indicating this tier&apos;s position within the schedule.</inlineHelpText>
        <label>Number</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__Price__c</fullName>
        <description>The actual price of this discount tier. This field will be populated when a new set of discount schedules are created for a new Order record.</description>
        <inlineHelpText>The actual price of this discount tier. This field will be populated when a new set of discount schedules are created for a new Order record.</inlineHelpText>
        <label>Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Schedule__c</fullName>
        <description>Discount Schedule to which this tier belongs.</description>
        <inlineHelpText>Discount Schedule to which this tier belongs.</inlineHelpText>
        <label>Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Discount Tiers</relationshipLabel>
        <relationshipName>DiscountTiers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpperBound__c</fullName>
        <description>Upper bound of the quantity range for this tier.</description>
        <inlineHelpText>Upper bound of the quantity range for this tier.</inlineHelpText>
        <label>Upper Bound</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Upper_Bound_fixed__c</fullName>
        <formula>SBQQ__UpperBound__c - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Upper Bound</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Discount Tier</label>
    <nameField>
        <label>Tier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Discount Tiers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>